@@ -39,10 +39,12 @@
 				<label>Path Mode:</label>
 			</div>
 			<div>
-				<input type="checkbox" id="chckbxMode" name="controlMode" />
-				<label id="lblMode" for="chckbxMode">Relative Path</label>
+				<input type="checkbox" id="chckbxRemoveOrigin" name="controlRemoveOrigin" />
+				<label id="lblRemoveOrigin" for="chckbxRemoveOrigin">Relative Path</label>
 				<input type="checkbox" id="chckbxRemoveQuery" name="controlRemoveQuery" />
 				<label id="lblRemoveQuery" for="chckbxRemoveQuery">Remove Query</label>
+				<input type="checkbox" id="chckbxRemoveFragment" name="controlRemoveFragment" />
+				<label id="lblRemoveFragment" for="chckbxRemoveFragment">Remove Hash Anchor</label>
 			</div>
 			<div>
 				<label id="lblTarget">Target: </label>
